force-app/main/default/objects/Data_Load_Sequence__c/Data_Load_Sequence__c.object-meta.xml
<CustomObject>
    <description>Data Load Sequence</description>
    <label>Data Load Sequence</label>
    <nameField>
        <label>Data Load Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Load Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>