force-app/main/default/objects/Data_Load_Sequence__c/fields/BIS__c.field-meta.xml
<CustomField>
    <fullName>BIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIS</label>
    <type>Checkbox</type>
</CustomField>