force-app/main/default/objects/Data_Load_Sequence__c/fields/CARE__c.field-meta.xml
<CustomField>
    <fullName>CARE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CARE</label>
    <type>Checkbox</type>
</CustomField>