force-app/main/default/objects/Data_Load_Sequence__c/fields/CLASSTYPE__c.field-meta.xml
<CustomField>
    <fullName>CLASSTYPE__c</fullName>
    <label>CLASSTYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>