force-app/main/default/objects/Data_Load_Sequence__c/fields/Clipper__c.field-meta.xml
<CustomField>
    <fullName>Clipper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clipper</label>
    <type>Checkbox</type>
</CustomField>