force-app/main/default/objects/Data_Load_Sequence__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SINGLE</fullName>
            </value>
            <value>
                <fullName>LIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>