force-app/main/default/objects/Data_Load_Sequence__c/fields/DMTM__c.field-meta.xml
<CustomField>
    <fullName>DMTM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMTM</label>
    <type>Checkbox</type>
</CustomField>