force-app/main/default/objects/Data_Load_Sequence__c/fields/ExtraLoad__c.field-meta.xml
<CustomField>
    <fullName>ExtraLoad__c</fullName>
    <label>ExtraLoad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>