force-app/main/default/objects/Data_Load_Sequence__c/fields/G400__c.field-meta.xml
<CustomField>
    <fullName>G400__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G400</label>
    <type>Checkbox</type>
</CustomField>