force-app/main/default/objects/Data_Load_Sequence__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Profile</fullName>
            </value>
            <value>
                <fullName>Top-Down Hierachy</fullName>
            </value>
            <value>
                <fullName>Contact Detail</fullName>
            </value>
            <value>
                <fullName>Detail Information (Life)/ Account Info(GI)</fullName>
            </value>
            <value>
                <fullName>Insured Details (Life)</fullName>
            </value>
            <value>
                <fullName>Policy Details</fullName>
            </value>
            <value>
                <fullName>Agent Info</fullName>
            </value>
            <value>
                <fullName>Reporting Structure Hierachy</fullName>
            </value>
            <value>
                <fullName>Insured Details (GI)</fullName>
            </value>
            <value>
                <fullName>Beneficiary Details</fullName>
            </value>
            <value>
                <fullName>Premium Breakdown</fullName>
            </value>
            <value>
                <fullName>Policy Changes</fullName>
            </value>
            <value>
                <fullName>Risk Info</fullName>
            </value>
            <value>
                <fullName>Own Risk</fullName>
            </value>
            <value>
                <fullName>Interest Info</fullName>
            </value>
            <value>
                <fullName>Payment History</fullName>
            </value>
            <value>
                <fullName>Fund History</fullName>
            </value>
            <value>
                <fullName>Fund Details</fullName>
            </value>
            <value>
                <fullName>Fund Price History</fullName>
            </value>
            <value>
                <fullName>Surveys Taken</fullName>
            </value>
            <value>
                <fullName>Assessment Notes List (UW)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes Desc (UW)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes List (POS)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes Desc (POS)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes List (PA)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes Desc (PA)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes List (Oth)</fullName>
            </value>
            <value>
                <fullName>Assessment Notes Desc (Oth)</fullName>
            </value>
            <value>
                <fullName>Cash value</fullName>
            </value>
            <value>
                <fullName>Sequence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>