force-app/main/default/objects/Data_Load_Sequence__c/fields/IsPaging__c.field-meta.xml
<CustomField>
    <fullName>IsPaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPaging</label>
    <type>Checkbox</type>
</CustomField>