force-app/main/default/objects/Data_Load_Sequence__c/fields/operation__c.field-meta.xml
<CustomField>
    <fullName>operation__c</fullName>
    <label>Operation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>