force-app/main/default/objects/Data_Load_Sequence__c/fields/ORDER__c.field-meta.xml
<CustomField>
    <fullName>ORDER__c</fullName>
    <label>ORDER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>