force-app/main/default/objects/Data_Load_Sequence__c/fields/PAGE_NAME__c.field-meta.xml
<CustomField>
    <fullName>PAGE_NAME__c</fullName>
    <label>PAGE_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>