force-app/main/default/objects/Data_Load_Sequence__c/fields/Policy_Apps__c.field-meta.xml
<CustomField>
    <fullName>Policy_Apps__c</fullName>
    <label>Policy Apps</label>
    <length>50</length>
    <type>Text</type>
</CustomField>