force-app/main/default/objects/Data_Load_Sequence__c/fields/PSEA__c.field-meta.xml
<CustomField>
    <fullName>PSEA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSEA</label>
    <type>Checkbox</type>
</CustomField>