force-app/main/default/objects/Data_Load_Sequence__c/fields/RLS__c.field-meta.xml
<CustomField>
    <fullName>RLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RLS</label>
    <type>Checkbox</type>
</CustomField>