force-app/main/default/objects/Data_Load_Sequence__c/fields/RowPerPage__c.field-meta.xml
<CustomField>
    <fullName>RowPerPage__c</fullName>
    <label>RowPerPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>