force-app/main/default/objects/Data_Load_Sequence__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>