force-app/main/default/objects/Data_Load_Sequence__c/listViews/All_MAGI.listView-meta.xml
<ListView>
    <fullName>All_MAGI</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Source__c</columns>
    <columns>Service__c</columns>
    <columns>operation__c</columns>
    <columns>CLASSTYPE__c</columns>
    <columns>PAGE_NAME__c</columns>
    <columns>Sequence__c</columns>
    <columns>ORDER__c</columns>
    <columns>Section__c</columns>
    <columns>DataType__c</columns>
    <columns>Information__c</columns>
    <columns>Policy_Apps__c</columns>
    <columns>IsDisplay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>MAGI</value>
    </filters>
    <label>All MAGI</label>
    <language>en_US</language>
</ListView>